[gd_scene load_steps=25 format=2]

[ext_resource path="res://weapons/arquebus.png" type="Texture" id=1]
[ext_resource path="res://weapons/scenes/arquebus.gd" type="Script" id=2]
[ext_resource path="res://weapons/arquebus_deployed.png" type="Texture" id=3]
[ext_resource path="res://Player/handspr.tscn" type="PackedScene" id=4]
[ext_resource path="res://weapons/projectiles/test_bullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://Music and Sounds/gunfire/gunfire_arquebus_1.ogg" type="AudioStream" id=6]
[ext_resource path="res://weapons/firing_effect/firingeffect_2.png" type="Texture" id=7]
[ext_resource path="res://weapons/firing_effect/firingeffect_3.png" type="Texture" id=8]
[ext_resource path="res://weapons/firing_effect/firingeffect_4.png" type="Texture" id=9]
[ext_resource path="res://weapons/firing_effect/firingeffect_5.png" type="Texture" id=10]
[ext_resource path="res://weapons/firing_effect/firingeffect_6.png" type="Texture" id=11]
[ext_resource path="res://weapons/firing_effect/firingeffect_1.png" type="Texture" id=12]
[ext_resource path="res://Effects/flash.png" type="Texture" id=13]
[ext_resource path="res://Effects/ShootSmoke.tscn" type="PackedScene" id=14]
[ext_resource path="res://weapons/song_effect/musketreload.mp3" type="AudioStream" id=15]
[ext_resource path="res://weapons/scenes/arquebusonplayer.gd" type="Script" id=16]

[sub_resource type="Animation" id=1]
resource_name = "deploy"
length = 1.8
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("body/spr:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 10.501, 13.0357 ), Vector2( 10.501, 13.0357 ), Vector2( 12.001, 13.036 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/spr:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3.03566, 10.501 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body/spr:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -90.0, -180.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("body/spr:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 1 ), ExtResource( 3 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("body/spr:z_index")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1.75, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "open_eye"
}, {
"args": [  ],
"method": "close_eye"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "fire"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("body/spr:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -3.03566, 10.501 ), Vector2( 3.036, 10.501 ), Vector2( -3.03566, 10.501 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("body/spr:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 10.501, 13.0357 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/spr:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3.03566, 10.501 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body/spr:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("body/spr:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 12.0
tracks/0/type = "value"
tracks/0/path = NodePath("body/spr:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 10.501, 13.0357 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/spr:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 11, 12 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -3.03566, 10.501 ), Vector2( -23.036, 10.501 ), Vector2( -23.036, 10.501 ), Vector2( -3.03566, 10.501 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body/spr:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("body/spr:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("body/spr:z_index")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 12 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("body/spr/hand:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1, 1.9, 2.3, 3.2, 4.5, 5.9, 7.3, 8.3, 9.6, 11, 11.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 6.337, 5 ), Vector2( 2.83305, 24.522 ), Vector2( 7.06005, 24.4108 ), Vector2( 6.337, 5 ), Vector2( 27.3607, 5.33371 ), Vector2( 6.337, 6 ), Vector2( 27.3607, 5.33371 ), Vector2( 6.337, 6 ), Vector2( 27.3607, 5.33371 ), Vector2( 6.337, 6 ), Vector2( 6.337, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 0.109091 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=7]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": false,
"name": "fire",
"speed": 10.0
} ]

[node name="arquebus" type="Node2D"]
position = Vector2( 14, -9 )
script = ExtResource( 2 )
onplayer = ExtResource( 16 )
hand = NodePath("body/spr/hand")
bullet = ExtResource( 5 )
_spawn_bullet_position = NodePath("body/spr/Position2D")
fire_sounds = [ ExtResource( 6 ) ]
_sounds_player = NodePath("AudioFire")
reload_sounds = ExtResource( 15 )
_reload_sound_player = NodePath("AdioReload")
shoot_smooke_effect = ExtResource( 14 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/deploy = SubResource( 1 )
anims/fire = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/reload = SubResource( 4 )

[node name="body" type="Area2D" parent="."]

[node name="col" type="CollisionShape2D" parent="body"]
shape = SubResource( 5 )
disabled = true

[node name="spr" type="Sprite" parent="body"]
position = Vector2( -23.036, 10.501 )
rotation = -1.5708
z_index = 1
texture = ExtResource( 1 )
offset = Vector2( 10.501, 13.0357 )
flip_v = true

[node name="Position2D" type="Position2D" parent="body/spr"]
position = Vector2( 30, 4.625 )

[node name="Line2D" type="Line2D" parent="body/spr/Position2D" groups=["presentation"]]
modulate = Color( 1, 1, 1, 0.51 )
points = PoolVector2Array( -0.0190315, -0.0134754, 20, -0.013 )
width = 0.8
width_curve = SubResource( 6 )
gradient = SubResource( 7 )
joint_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Light2D" type="Light2D" parent="body/spr/Position2D"]
visible = false
position = Vector2( 3.55825, 0.16411 )
texture = ExtResource( 13 )
color = Color( 1, 0.631373, 0, 1 )
energy = 0.7
shadow_enabled = true

[node name="Light2D2" type="Light2D" parent="body/spr/Position2D"]
visible = false
position = Vector2( -18.9612, 2.40903 )
texture = ExtResource( 13 )
color = Color( 0.933333, 0.823529, 0.564706, 1 )
energy = 0.4
shadow_enabled = true

[node name="rmt_shootsmoke" type="RemoteTransform2D" parent="body/spr/Position2D"]

[node name="hand" parent="body/spr" instance=ExtResource( 4 )]
position = Vector2( 18.9512, 5.60023 )
rotation = 1.5708

[node name="AudioFire" type="AudioStreamPlayer2D" parent="."]

[node name="AdioReload" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
volume_db = 24.0

[node name="fire_effect" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 8 )
animation = "fire"
frame = 5
offset = Vector2( -17, -4 )
flip_h = true
